--- a/.td/engine.yml
+++ b/.td/engine.yml
@@ -1,5 +1,5 @@
 environment: AWS
-instance_type: m5.4xlarge
+instance_type: r5d.4xlarge
 instance_count: 3
 vpc_id: vpc-1ebf5b78
 subnet_id: subnet-ec236ba5
